name:                ghcjs-ffiqq
version:             0.1.0.0
synopsis:            FFI QuasiQuoter for GHCJS
license:             MIT
license-file:        LICENSE
author:              Luite Stegeman
maintainer:          stegeman@gmail.com
copyright:           Luite Stegeman
category:            Web
build-type:          Simple
cabal-version:       >=1.10

flag build-example
  description: build the example program
  default: False
  manual: True

library
  exposed-modules:     GHCJS.Foreign.QQ
                       GHCJS.PureMarshal
  build-depends:       base >=4.7 && <4.9,
                       template-haskell,
                       ghcjs-base,
                       split,
                       containers,
                       text,
                       ghc-prim
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghcjs-options:       -O2

Executable example
  if !flag(build-example)
     buildable: False
  Main-Is:        Example.hs
  Default-Language: Haskell2010
  hs-source-dirs: .
  Build-Depends:  base                >= 4    &&  < 5,
                  ghcjs-ffiqq
  GHC-Options:    -O -Wall